--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -9,7 +9,7 @@
         <version>3.3.4</version>
         <relativePath/>
     </parent>
-    <groupId>org.finpay</groupId>
+    <groupId>com.finpay</groupId>
     <artifactId>authentication-service</artifactId>
     <version>1.0-SNAPSHOT</version>
 
