--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -84,6 +84,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>4.2.0-RC1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
