--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  cloud:
+    config:
+      enabled: false
 
 eureka:
   client:
